# Sym-MCP

./: .gitignore  PUBLISHING.md  README.md  README.zh.md  pyproject.toml
.github/workflows/: pypi-publish.yml
scripts/: benchmark.py
src/sym_mcp/: __init__.py  __main__.py  config.py  schemas.py  server.py
src/sym_mcp/errors/: __init__.py  parser.py
src/sym_mcp/executor/: __init__.py  pool.py  sandbox.py  worker_main.py
src/sym_mcp/security/: ast_guard.py
tests/: test_ast_guard.py  test_error_parser.py  test_math_correctness.py  test_perf_guardrails.py  test_pool.py  test_security_adversarial.py  test_server_integration.py
