[build-system]
requires = ["setuptools>=69", "setuptools-scm[toml]>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sym-mcp"
dynamic = ["version"]
description = "SymPy sandbox MCP server based on FastMCP"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
keywords = ["mcp", "sympy", "sandbox", "agent", "llm", "math"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "fastmcp>=3.0.0",
  "sympy>=1.13.0",
  "pydantic>=2.8.0",
]

[project.urls]
Homepage = "https://github.com/Eis4TY/Sym-MCP"
Repository = "https://github.com/Eis4TY/Sym-MCP"
Issues = "https://github.com/Eis4TY/Sym-MCP/issues"

[project.scripts]
sym-mcp = "sym_mcp.server:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
fallback_version = "0.0.0"
version_scheme = "no-guess-dev"
local_scheme = "no-local-version"
